--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,25 @@
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
-            <plugin>
+            <plugin><plugins>
+                <!-- AS BEFORE -->
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>2.0.3</version>
+                    <configuration>
+                        <jdkVersion>1.8</jdkVersion>
+                        <!-- Use your own application name -->
+                        <appName>ccnewsweb</appName>
+                        <processTypes>
+                            <!-- Tell Heroku how to launch your application -->
+                            <!-- You might have to remove the ./ in front   -->
+                            <!-- Use your own app name for the jar file -->
+                            <web>java -jar ./target/ccnewsweb-1.0-jar-with-dependencies.jar</web>
+                        </processTypes>
+                    </configuration>
+                </plugin>
+            </plugins>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -17,7 +35,21 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
+                <!-- AS BEFORE -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.0.1</version>
+                    <executions>
+                        <execution>
+                            <id>copy-dependencies</id>
+                            <phase>package</phase>
+                            <goals><goal>copy-dependencies</goal></goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+
     </build>
 
 
